# RapidOcrOnnx

./: .gitignore  CMakeLists.txt  README.md  build-linux-portable.sh  build.sh
.github/workflows/: builder.yml  linux.yml  macos.yml  windows.yml
include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLiteCApi.h  OcrLiteImpl.h  OcrStruct.h  OcrUtils.h
src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteCApi.cpp  OcrLiteImpl.cpp  OcrUtils.cpp
